# aerosurrogate

./: DEPLOY.md  Dockerfile.api  Dockerfile.ui  README.md  docker-compose.yml  entrypoint_api.sh  entrypoint_twin.sh  nginx.conf  pyproject.toml  railway.toml  train.py  train_v3.py  twin_runner.py
aerosurrogate_front/: package-lock.json  package.json
aerosurrogate_front/public/: index.html
aerosurrogate_front/src/: App.jsx
aerosurrogate_front/src/api/: client.js
aerosurrogate_front/src/components/common/: Button.jsx  Card.jsx  ErrorMessage.jsx  (+5 more)
aerosurrogate_front/src/constants/: config.js  theme.js
aerosurrogate_front/src/utils/: foilMath.js  formatters.js
artifacts/: metrics.json
configs/: data_sources.yaml  feature_config.yaml  model_config.yaml
digital_twin/: real_time_predictor.py  telemetry_ingestion.py
inference/: ensemble_predictor.py
models/fno/: fno2d.py  spectral_conv.py
optimization/: airfoil_parametrization.py  bayesian_optimizer.py
src/: __init__.py
src/api/: main.py  schemas.py
src/data/: cp_dataset_generator.py  ingestion.py  loader.py  splitter.py  validator.py  xfoil_generator.py
src/data/acquire/: download.py
src/data/adapters/: base_adapter.py  csv_adapter.py  openfoam_adapter.py  su2_adapter.py  synthetic_field_adapter.py  vlm_adapter.py  vtk_adapter.py
src/demo/: demo_model.py
src/features/: cst.py  engineer.py  scaler_store.py
src/inference/: predictor.py  sklearn_predictor.py
src/models/: base_model.py  deeponet.py  ensemble.py  lgbm_model.py  mlp_model.py  physics_loss.py  xgb_model.py
src/training/: trainer.py  tuner.py
src/ui/: app.py
src/uncertainty/: distance.py  scorer.py  variance.py
tests/: test_core.py
(+16 files in other folders)
